--- a/FeriaDeLibro.Entities/FeriaDeLibro.Entities.csproj
+++ b/FeriaDeLibro.Entities/FeriaDeLibro.Entities.csproj
@@ -10,4 +10,8 @@
     <Folder Include="DTO\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+  </ItemGroup>
+
 </Project>
